// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb demo -- backbutton 1`] = `
.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-5 {
  vertical-align: baseline;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-5 {
  vertical-align: baseline;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <svg
          class=" emotion-0 emotion-1"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- breadcrumb 1`] = `
.emotion-69 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-69:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-69:hover a.uc-fe-breadcrumb-item,
.emotion-69:hover a.uc-fe-breadcrumb-item:hover,
.emotion-69:hover a.uc-fe-breadcrumb-item:visited,
.emotion-69:hover a.uc-fe-breadcrumb-item:link,
.emotion-69:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-45 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-45:link,
.emotion-45:visited {
  color: #526075;
}

.emotion-45:hover,
.emotion-45:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-42 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-49 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-47 {
  vertical-align: baseline;
}

.emotion-51 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-55 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-59 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-59,
.emotion-59:hover,
.emotion-59:visited,
.emotion-59:link,
.emotion-59:active {
  color: #6b798e;
}

.emotion-67 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-40 {
  font-size: 12px;
}

.emotion-40 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-40 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-40 .uc-fe-form-label {
  color: #526075;
}

.emotion-9 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-9:before,
.emotion-9:after {
  content: ' ';
  display: table;
}

.emotion-9:after {
  clear: both;
}

.emotion-9 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  max-width: 100%;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-3:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-3 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-3 .uc-fe-input-wrap,
.emotion-3 .uc-fe-input-prefix,
.emotion-3 .uc-fe-input-suffix,
.emotion-3 .uc-fe-input-clear,
.emotion-3 input {
  padding: 0 4px;
}

.emotion-3.uc-fe-input-block {
  display: block;
}

.emotion-3 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 .uc-fe-input-prefix,
.emotion-3 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-3 input,
.emotion-3 input:hover,
.emotion-3 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-3 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 input::-ms-clear {
  display: none;
}

.emotion-3:hover .uc-fe-input-clear,
.emotion-3.uc-fe-input-focused .uc-fe-input-clear {
  opacity: 1;
  cursor: pointer;
}

.emotion-32 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-32 .uc-fe-radio-styletype-default,
.emotion-32 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-32 .uc-fe-radio-styletype-default:last-child,
.emotion-32 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-32 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-32 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-32 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-32 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-32 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-32 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-32 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-18 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-18 > * {
  font-size: 12px;
}

.emotion-18 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-18.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-16.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-16 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-16.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-16 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-14 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-24 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-24 > * {
  font-size: 12px;
}

.emotion-24 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-24.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-24:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-22.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-22 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-69 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-69:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-69:hover a.uc-fe-breadcrumb-item,
.emotion-69:hover a.uc-fe-breadcrumb-item:hover,
.emotion-69:hover a.uc-fe-breadcrumb-item:visited,
.emotion-69:hover a.uc-fe-breadcrumb-item:link,
.emotion-69:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-45 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-45:link,
.emotion-45:visited {
  color: #526075;
}

.emotion-45:hover,
.emotion-45:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-42 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-49 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-47 {
  vertical-align: baseline;
}

.emotion-51 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-55 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-59 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-59,
.emotion-59:hover,
.emotion-59:visited,
.emotion-59:link,
.emotion-59:active {
  color: #6b798e;
}

.emotion-67 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-40 {
  font-size: 12px;
}

.emotion-40 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-40 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-40 .uc-fe-form-label {
  color: #526075;
}

.emotion-9 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-9:before,
.emotion-9:after {
  content: ' ';
  display: table;
}

.emotion-9:after {
  clear: both;
}

.emotion-9 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  max-width: 100%;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-3:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-3 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-3 .uc-fe-input-wrap,
.emotion-3 .uc-fe-input-prefix,
.emotion-3 .uc-fe-input-suffix,
.emotion-3 .uc-fe-input-clear,
.emotion-3 input {
  padding: 0 4px;
}

.emotion-3.uc-fe-input-block {
  display: block;
}

.emotion-3 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 .uc-fe-input-prefix,
.emotion-3 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-3 input,
.emotion-3 input:hover,
.emotion-3 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-3 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 input::-ms-clear {
  display: none;
}

.emotion-3:hover .uc-fe-input-clear,
.emotion-3.uc-fe-input-focused .uc-fe-input-clear {
  opacity: 1;
  cursor: pointer;
}

.emotion-32 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-32 .uc-fe-radio-styletype-default,
.emotion-32 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-32 .uc-fe-radio-styletype-default:last-child,
.emotion-32 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-32 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-32 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-32 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-32 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-32 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-32 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-32 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-18 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-18 > * {
  font-size: 12px;
}

.emotion-18 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-18.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-16.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-16 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-16.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-16 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-14 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-24 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-24 > * {
  font-size: 12px;
}

.emotion-24 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-24.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-24:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-22.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-22 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-40 emotion-41"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        separator
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <span
          class="uc-fe-input emotion-3 emotion-4"
        >
          <span
            class="uc-fe-input-wrap"
          >
            <input
              value="/"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-32 emotion-33"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-18 emotion-19"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-16 emotion-17"
            >
              <svg
                class="uc-fe-radio-icon emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              block-hover
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-24 emotion-19"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-22 emotion-17"
            >
              <svg
                class="uc-fe-radio-icon emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              hover
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-24 emotion-19"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-22 emotion-17"
            >
              <svg
                class="uc-fe-radio-icon emotion-14 emotion-15"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              active
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-69 emotion-70"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-44 emotion-45 emotion-46"
        type="left"
      >
        <svg
          class=" emotion-42 emotion-15"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-49 emotion-50"
      >
        <i
          class="uc-fe-icon icon__home emotion-47 emotion-48"
        />
      </span>
      <span
        class="emotion-51 emotion-52"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-55 emotion-50"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-47 emotion-48"
        />
      </span>
      <span
        class="emotion-51 emotion-52"
      >
        /
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-59 emotion-60"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-51 emotion-52"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-55 emotion-50"
      >
        reload
      </span>
      <span
        class="emotion-51 emotion-52"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-67 emotion-50"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- breadcrumb-separator 1`] = `
.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-5 {
  vertical-align: baseline;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-5 {
  vertical-align: baseline;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <svg
          class=" emotion-0 emotion-1"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      />
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      />
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      />
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      />
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <svg
          class=" emotion-0 emotion-1"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <svg
          class=" emotion-0 emotion-1"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;&gt;
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <svg
          class=" emotion-0 emotion-1"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        -&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        -&gt;
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        -&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        -&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <svg
          class=" emotion-0 emotion-1"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        <i
          class="uc-fe-icon icon__caret-right emotion-5 emotion-6"
        />
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        <i
          class="uc-fe-icon icon__caret-right emotion-5 emotion-6"
        />
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        <i
          class="uc-fe-icon icon__caret-right emotion-5 emotion-6"
        />
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        <i
          class="uc-fe-icon icon__caret-right emotion-5 emotion-6"
        />
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- breadcrumb-styleType 1`] = `
.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-5 {
  vertical-align: baseline;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-56 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-56 span.uc-fe-breadcrumb-item:hover,
.emotion-56 a.uc-fe-breadcrumb-item:hover {
  color: #3555f6;
}

.emotion-85 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-85 span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-85 a.uc-fe-breadcrumb-item,
.emotion-85 a.uc-fe-breadcrumb-item:hover,
.emotion-85 a.uc-fe-breadcrumb-item:visited,
.emotion-85 a.uc-fe-breadcrumb-item:link,
.emotion-85 a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-5 {
  vertical-align: baseline;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-56 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-56 span.uc-fe-breadcrumb-item:hover,
.emotion-56 a.uc-fe-breadcrumb-item:hover {
  color: #3555f6;
}

.emotion-85 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-85 span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-85 a.uc-fe-breadcrumb-item,
.emotion-85 a.uc-fe-breadcrumb-item:hover,
.emotion-85 a.uc-fe-breadcrumb-item:visited,
.emotion-85 a.uc-fe-breadcrumb-item:link,
.emotion-85 a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <svg
          class=" emotion-0 emotion-1"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-56 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <svg
          class=" emotion-0 emotion-1"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-85 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <svg
          class=" emotion-0 emotion-1"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-5 emotion-6"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item 1`] = `
.emotion-47 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-47:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-47:hover a.uc-fe-breadcrumb-item,
.emotion-47:hover a.uc-fe-breadcrumb-item:hover,
.emotion-47:hover a.uc-fe-breadcrumb-item:visited,
.emotion-47:hover a.uc-fe-breadcrumb-item:link,
.emotion-47:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-27 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-27:link,
.emotion-27:visited {
  color: #526075;
}

.emotion-27:hover,
.emotion-27:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-24 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-29 {
  vertical-align: baseline;
}

.emotion-33 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-31 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-45 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-22 {
  font-size: 12px;
}

.emotion-22 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-22 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-22 .uc-fe-form-label {
  color: #526075;
}

.emotion-9 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-9:before,
.emotion-9:after {
  content: ' ';
  display: table;
}

.emotion-9:after {
  clear: both;
}

.emotion-9 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-47 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-47:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-47:hover a.uc-fe-breadcrumb-item,
.emotion-47:hover a.uc-fe-breadcrumb-item:hover,
.emotion-47:hover a.uc-fe-breadcrumb-item:visited,
.emotion-47:hover a.uc-fe-breadcrumb-item:link,
.emotion-47:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-27 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-27:link,
.emotion-27:visited {
  color: #526075;
}

.emotion-27:hover,
.emotion-27:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-24 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-29 {
  vertical-align: baseline;
}

.emotion-33 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-31 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-45 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-22 {
  font-size: 12px;
}

.emotion-22 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-22 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-22 .uc-fe-form-label {
  color: #526075;
}

.emotion-9 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-9:before,
.emotion-9:after {
  content: ' ';
  display: table;
}

.emotion-9:after {
  clear: both;
}

.emotion-9 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-tip-on {
  display: none;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-22 emotion-23"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        current
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-3 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        noAction
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-3 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-47 emotion-48"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-26 emotion-27 emotion-28"
        type="left"
      >
        <svg
          class=" emotion-24 emotion-25"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3986407,7.65510741 L12,13.8300075 L5.60135725,7.65510546 C5.14150935,7.21129876 4.43778366,7.25756618 4.03031254,7.7552821 C3.62357936,8.25209663 3.66385814,9.01317255 4.12257613,9.45588874 L11.2606084,16.34492 C11.6820987,16.7517071 12.3179013,16.7517071 12.7393916,16.34492 L19.8774239,9.45588874 C20.3361419,9.01317255 20.3764206,8.25209663 19.9696875,7.7552821 C19.5622163,7.25756619 18.8584907,7.21129876 18.3986407,7.65510741 Z"
            transform="rotate(90 12 12)"
          />
        </svg>
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-31 emotion-32"
      >
        <i
          class="uc-fe-icon icon__home emotion-29 emotion-30"
        />
      </span>
      <span
        class="emotion-33 emotion-34"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-31 emotion-32"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-29 emotion-30"
        />
      </span>
      <span
        class="emotion-33 emotion-34"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-31 emotion-32"
      >
        custom
      </span>
      <span
        class="emotion-33 emotion-34"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-45 emotion-32"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item-current 1`] = `
.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-0 emotion-1"
      >
        Home
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-4 emotion-1"
      >
        Home
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item-disabled 1`] = `
.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #bbb !important;
}

.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #bbb !important;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-0 emotion-1"
      >
        Home
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-4 emotion-1"
        disabled=""
      >
        Home
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item-noAction 1`] = `
.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-0 emotion-1"
      >
        Home
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-4 emotion-1"
      >
        Home
      </span>
    </div>
  </div>
</div>
`;
